--- a/src/app/comment/comment-item/comment-item.component.scss
+++ b/src/app/comment/comment-item/comment-item.component.scss
@@ -11,12 +11,13 @@ section {
     .title {
       display: flex;
       img {
-        border-radius: 50px;
-        width: 60px;
-        height: 60px;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
       }
       h1 {
         font-size: 20px;
+        padding-left: 10px;
       }
       span {
         margin-top: 20px;
