--- a/src/app/comment/comment-item/comment-reply/comment-reply.component.scss
+++ b/src/app/comment/comment-item/comment-reply/comment-reply.component.scss
@@ -1,7 +1,7 @@
 section {
   margin-left: 30%;
   margin-right: 20%;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+  box-shadow: 8px 8px 2px 1px rgba(147, 147, 167, 0.2);
   border-radius: 15px;
   padding: 20px;
   .card {
@@ -11,12 +11,13 @@ section {
     .title {
       display: flex;
       img {
-        border-radius: 50px;
-        width: 60px;
-        height: 60px;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
       }
       h1 {
         font-size: 20px;
+        padding-left: 10px;
       }
       span {
         margin-top: 20px;
@@ -31,10 +32,10 @@ section {
       margin-right: 20px;
     }
   }
-  #icon1{
+  #icon1 {
     padding-right: 10px;
   }
-  #icon2{
+  #icon2 {
     padding-left: 5px;
   }
   p {
