--- a/src/app/comment/comment-item/comment-reply/user-reply/user-reply.component.html
+++ b/src/app/comment/comment-item/comment-reply/user-reply/user-reply.component.html
@@ -1,1 +1,5 @@
-<h1>bla</h1>
+<div class="card">
+  <img src="../../../assets/{{ replyItem.image.png }}" alt="" />
+  <textarea [(ngModel)]="content"> </textarea>
+  <button (click)="reply()">Reply</button>
+</div>
