--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -1,1 +1,6 @@
-<app-comment-item *ngFor="let comment of comments" [commentItem]='comment' [curUser]="currentUser"></app-comment-item>
+<app-comment-item
+  (onMainReply)="HanldeMainReply($event)"
+  *ngFor="let comment of comments"
+  [commentItem]="comment"
+  [curUser]="currentUser"
+></app-comment-item>
