--- a/src/app/comment/comment-item/comment-item.component.scss
+++ b/src/app/comment/comment-item/comment-item.component.scss
@@ -1,42 +1,56 @@
+*{
+  background-color: #fff;
+}
 section {
   margin-left: 25%;
   margin-right: 25%;
   box-shadow: 8px 8px 2px 1px rgba(147, 147, 167, 0.2);
   border-radius: 15px;
-  padding: 20px;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+
   .card {
     display: flex;
     justify-content: space-between;
-
+    
     .title {
       display: flex;
+      margin-bottom: 5px;
       img {
         border-radius: 50%;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
+        margin-left: 20px;
+        margin-top: 10px;
       }
       h1 {
-        font-size: 20px;
+        font-size: 18px;
         padding-left: 10px;
+        margin-top: 15px;
       }
       span {
         margin-top: 20px;
         margin-left: 30px;
+        font-size: 14px;
+      }
+    }
+    .arricon {
+      margin-top: 20px;
+      margin-right: 20px;
+      color: hsl(238, 40%, 52%);
+      font-weight: bold;
+      #iconSeparate{
+        margin-right: 5px;
+      }
+      #icon1Div{
+        margin-right: 15px;
       }
     }
     .arricon:hover {
       cursor: pointer;
     }
-    .arricon {
-      margin-top: 20px;
-      margin-right: 20px;
-    }
-    #icon1{
-      padding-right: 10px;
-    }
-    #icon2{
-      padding-left: 5px;
-    }
+    
   }
   p {
     padding-left: 20px;
