--- a/src/app/comment/comment-item/comment-reply/user-reply/user-reply.component.scss
+++ b/src/app/comment/comment-item/comment-reply/user-reply/user-reply.component.scss
@@ -1,14 +1,22 @@
+*{
+  background-color: #fff;
+}
+
 .card {
   margin-left: 30%;
   margin-right: 20%;
   box-shadow: 8px 8px 2px 1px rgba(147, 147, 167, 0.2);
+  border-radius: 10px;
   height: 130px;
   display: flex;
   align-items: center;
+  margin-top: 10px;
+
   img {
     border-radius: 50%;
     width: 50px;
     height: 50px;
+    margin-left: 20px;
   }
   textarea {
     width: 75%;
@@ -18,6 +26,7 @@
     margin-left: 10px;
     resize: none;
     border-radius: 20px;
+    padding-left: 10px;
   }
   button {
     margin-left: 10px;
@@ -26,5 +35,8 @@
     border-radius: 20px;
     background-color: hsl(238, 40%, 52%);
     color: white;
+  }
+  button:hover{
+    cursor: pointer;
   }
 }
