--- a/src/app/comment/comment-item/comment-item.component.scss
+++ b/src/app/comment/comment-item/comment-item.component.scss
@@ -13,7 +13,18 @@ section {
   .card {
     display: flex;
     justify-content: space-between;
-    
+    .you{
+      height: 28px;
+      width: 50px;
+      background-color: hsl(238, 40%, 52%);
+      color: white;
+      font-size: 12px;
+      text-align: center;
+      margin-left: 10px;
+      margin-top: 13px;
+      border-radius: 10px;
+      line-height: 30px;
+    }
     .title {
       display: flex;
       margin-bottom: 5px;
@@ -36,6 +47,7 @@ section {
       }
     }
     .arricon {
+      display: flex;
       margin-top: 20px;
       margin-right: 20px;
       color: hsl(238, 40%, 52%);
@@ -45,6 +57,7 @@ section {
       }
       #icon1Div{
         margin-right: 15px;
+        color: hsl(358, 79%, 66%);
       }
     }
     .arricon:hover {
