--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -1,6 +1,7 @@
 <section class="UpperPart">
   <app-comment-item
     (onMainReply)="HanldeMainReply($event)"
+    (idEmitted)="HandleIdEmitted($event)"
     *ngFor="let comment of comments"
     [commentItem]="comment"
     [curUser]="currentUser"
@@ -10,6 +11,6 @@
 <div class="userReplyComment">
   <img src="../../assets/{{currentUser.image.png}}" alt="User avatar">
   <textarea id="textarea" [(ngModel)]="mainreply"></textarea>
-  <button id="button" (click)="reply()">Reply</button>
+  <button id="button" (click)="reply()">Send</button>
 </div>
 
