--- a/src/app/comment/comment.component.scss
+++ b/src/app/comment/comment.component.scss
@@ -1,4 +1,3 @@
-
 .UpperPart {
   height: 80vh;
   overflow-y: scroll;
@@ -17,7 +16,7 @@
     margin-left: 20px;
     margin-top: 10px;
   }
-  textarea{
+  textarea {
     background-color: #fff;
     height: 120px;
     width: 500px;
@@ -36,6 +35,8 @@
     background-color: hsl(238, 40%, 52%);
     color: white;
   }
+  button:hover {
+    cursor: pointer;
+    transform: translate(2px, 2px);
+  }
 }
-  
-
