newHandlers,Improved Funcitonal

--- a/src/app/comment/comment-item/comment-item.component.html
+++ b/src/app/comment/comment-item/comment-item.component.html
@@ -64,6 +64,7 @@
 
 <app-comment-reply
   (bla)="handleMainReply($event)"
+  (idEmittedGrandChild)="handleIdEmittedGrandChild($event)"
   *ngFor="let reply of commentItem.replies"
   [replyItem]="reply"
   [replyCurUser]="curUser"
