--- a/src/app/comment/comment-item/comment-reply/comment-reply.component.html
+++ b/src/app/comment/comment-item/comment-reply/comment-reply.component.html
@@ -68,4 +68,5 @@
   *ngIf="userReply"
   (onReply)="handleContent($event)"
   [replyItem]="replyCurUser"
+  [replyTo]="replyItem.replyingTo"
 ></app-user-reply>
