--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -2,6 +2,7 @@
   <app-comment-item
     (onMainReply)="HanldeMainReply($event)"
     (idEmitted)="HandleIdEmitted($event)"
+    (replyToDelete)="HandleReplyToDelete($event)"
     *ngFor="let comment of comments"
     [commentItem]="comment"
     [curUser]="currentUser"
