--- a/src/app/comment/comment-item/comment-item.component.scss
+++ b/src/app/comment/comment-item/comment-item.component.scss
@@ -1,4 +1,4 @@
-*{
+* {
   background-color: #fff;
 }
 section {
@@ -13,7 +13,7 @@ section {
   .card {
     display: flex;
     justify-content: space-between;
-    .you{
+    .you {
       height: 28px;
       width: 50px;
       background-color: hsl(238, 40%, 52%);
@@ -52,10 +52,10 @@ section {
       margin-right: 20px;
       color: hsl(238, 40%, 52%);
       font-weight: bold;
-      #iconSeparate{
+      #iconSeparate {
         margin-right: 5px;
       }
-      #icon1Div{
+      #icon1Div {
         margin-right: 15px;
         color: hsl(358, 79%, 66%);
       }
@@ -63,9 +63,32 @@ section {
     .arricon:hover {
       cursor: pointer;
     }
-    
   }
   p {
     padding-left: 20px;
+  }
+}
+
+.edit {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  &__textArea {
+    width: 75%;
+    height: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    resize: none;
+    border-radius: 20px;
+    padding-left: 10px;
+  }
+  &__updateButton {
+    margin-left: 10px;
+    width: 70px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: hsl(238, 40%, 52%);
+    color: white;
   }
 }
